디테일 페이지 수정

--- a/www/templates/food-detail.html
+++ b/www/templates/food-detail.html
@@ -1,28 +1,76 @@
 <ion-view view-title="Food detail">
   <ion-content class="padding">
     <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
-      </div>
+
+  <div class="item item-avatar">
+    <img src="http://tmhm1.dothome.co.kr/06.02/pdt_basic.png">
+    <h2>First Snack</h2>
+    <p>Nongsim</p>
+  </div>
+  
+ 
+
+
+  <div class="item item-body">
+    <img class="full-image" src="http://tmhm1.dothome.co.kr/06.02/pdt_basic.png">
+    <p>
+      This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+      the content is from a card-body consisting of an image and paragraph text. The footer
+      consists of tabs, icons aligned left, within the card-footer.
+    </p>
+    <p>
+  
+<!-- ingredients -->
+  <div class="list card">
+  <div class="item item-divider">
+          Ingredient
     </div>
+
+  <a href="#" class="item item-icon-left">
+    <i class="icon ion-beaker"></i>
+    <p>Ingredient 1</p>
+  </a>
+</div>
+
+<!-- recommanded -->
     <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
-      </div>
+  <div class="item item-divider">
+          recommanded
     </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
-    </div>
+
+  <a href="#" class="item item-icon-left">
+    <i class="icon ion-beaker"></i>
+    <p>Ingredient 1</p>
+  </a>
+
+</div>
+
+
+<!-- count LIKE and Comments -->
+    </p>
+    <p>
+      <a href="#" class="subdued">1 Like</a>
+      <a href="#" class="subdued">5 Comments</a>
+    </p>
+  </div>
+
+<!-- Like and Comments Button -->
+ <div class="item tabs tabs-secondary tabs-icon-left">
+    <a class="tab-item" href="#">
+      <i class="icon ion-thumbsup"></i>
+      Like
+    </a> 
+    <a class="tab-item" href="#">
+      <i class="icon ion-chatbox"></i>
+      Comment
+    </a>
+    <a class="tab-item" href="#">
+      <i class="icon ion-share"></i>
+      Share
+    </a>
+  </div>
+  
+
+</div>
   </ion-content>
 </ion-view>
