성분페이지 업데이트

--- a/www/templates/food-home.html
+++ b/www/templates/food-home.html
@@ -1,6 +1,7 @@
 
  <ion-view title="Food Analysis">
     
+    <!-- search -->
     <div class="bar bar-subheader item-input-inset">
         <label class="item-input-wrapper">
             <i class="icon ion-ios7-search placeholder-icon"></i>
@@ -11,14 +12,14 @@
         <button class="button button-clear" ng-click="search()">Search</button>
     </div> 
 
-     
+ <!-- Ranking <-->    
       <ion-content class="padding">
   
 
-            <!-- search -->
+            
 
 
- <!-- Ranking <--><br><br>
+ <br><br>
             <ion-list>
                 <div class="item item-divider">
           Ranking Top 10
