--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -14,17 +14,17 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Review tab -->
-  <ion-tab title="Review" icon-off="ion-eye" icon-on="ion-eye" href="#/tab/chats">
+  <ion-tab title="Review" icon-off="ion-eye" icon-on="ion-eye" href="#/tab/review">
     <ion-nav-view name="tab-review"></ion-nav-view>
   </ion-tab>
 
   <!-- dictionary tab -->
-  <ion-tab title="Dic" icon-off="ion-briefcase" icon-on="ion-briefcase" href="#/tab/account">
+  <ion-tab title="Dic" icon-off="ion-briefcase" icon-on="ion-briefcase" href="#/tab/dic">
     <ion-nav-view name="tab-dic"></ion-nav-view>
   </ion-tab>
 
 <!-- sFa tab -->
-  <ion-tab title="Sfa" icon-off="ion-information" icon-on="ion-information" href="#/tab/account">
+  <ion-tab title="Sfa" icon-off="ion-information" icon-on="ion-information" href="#/tab/sfa">
     <ion-nav-view name="tab-sfa"></ion-nav-view>
   </ion-tab>
 
