--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,7 +7,7 @@ navigation history that also transitions its views in and out.
 <!-- class="tabs-icon-top tabs-color-active-positive" -->
 
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
- <!-- ng-class="{'tabs-positive': platform == 'android', 'tabs-icon-top': platform != 'android'}"> -->
+ <ng-class="{'tabs-positive': platform == 'android', 'tabs-icon-top': platform != 'android'}">
 
   <!-- Home tab -->
   <ion-tab title="Home" icon-off="ion-home" icon-on="ion-home" href="#/tab/home">
