--- a/www/templates/food-home.html
+++ b/www/templates/food-home.html
@@ -1,18 +1,6 @@
-
-<<<<<<< HEAD
-<ion-view title="Food Analysis">
-
-
-     
-   
-
-
- 
-=======
  <ion-view title="Food Analysis">
 
->>>>>>> 8d9ab4f6b63561b5932d6a69b663e7f1403b4741
-    <!-- search -->
+   <!-- search -->
     <div class="bar bar-subheader item-input-inset">
         <label class="item-input-wrapper">
             <i class="icon ion-ios7-search placeholder-icon"></i>
@@ -21,16 +9,10 @@
             <button class="button button-clear" ng-click="clearSearch()">X</button>
         </label>
         <button class="button button-clear" ng-click="search()">Search</button>
-<<<<<<< HEAD
-    </div> 
-
- <!-- Ranking -->    
-=======
-    </div>
-d
- <!-- Ranking -->
->>>>>>> 8d9ab4f6b63561b5932d6a69b663e7f1403b4741
-      <ion-content class="padding"><br><br>
+   </div>
+ 
+<-- Ranking -->
+     <ion-content class="padding"><br><br>
             <ion-list>
                 <div class="item item-divider">
           Ranking Top 10
