--- a/www/templates/food-home.html
+++ b/www/templates/food-home.html
@@ -11,7 +11,7 @@
         <button class="button button-clear" ng-click="search()">Search</button>
    </div>
  
-<-- Ranking -->
+<!-- Ranking -->
      <ion-content class="padding"><br><br>
             <ion-list>
                 <div class="item item-divider">
