디테일 페이지 라우팅 수정

--- a/www/templates/food-home.html
+++ b/www/templates/food-home.html
@@ -25,8 +25,8 @@
 </ion-item> -->
 
                    <ion-item ng-repeat="food in foods | limitTo:10" type="item-text-wrap" class="item-avatar"
-                    href="#/tab/home/{{food._id}}>
-                      <img ng-src="http://tmhm1.dothome.co.kr/06.02/pdt_basic.png"/>
+                   href="#/tab/home/{{food._id}}">
+                      <img src="http://tmhm1.dothome.co.kr/06.02/pdt_basic.png"/>
                       {{food.snack_name}}
                       <p>{{food.manufacturer}}</p>
                   </ion-item>
