이미지 업데이트

--- a/www/templates/comments-modal.html
+++ b/www/templates/comments-modal.html
@@ -1,6 +1,6 @@
 <div class="modal">
         <header class="bar bar-header bar-positive">
-          <h2 class="title"><a href="#">12<a> People Likes it!</h1>
+          <h2 class="title"><a>12<a> People Likes it!</h1>
           <div class="button button-clear" ng-click="modal.hide()"><span class="icon ion-close"></span></div>
         </header>
         <content has-header="true" padding="true">
