--- a/www/templates/food-detail.html
+++ b/www/templates/food-detail.html
@@ -3,13 +3,13 @@
     <div class="list card">
 
       <div class="item item-avatar">
-        <img src="http://tmhm1.dothome.co.kr/06.02/pdt_basic.png">
+        <img src="{{food.image_url}}">
         <h2>{{ food.snack_name }}</h2>
         <p>{{food.manufacturer}}</p>
       </div>
 
       <div class="item item-body">
-        <img class="full-image" src="http://tmhm1.dothome.co.kr/06.02/pdt_basic.png">
+        <img class="full-image" src="{{food.image_url}}">
         <p>
           text
         </p>
@@ -37,8 +37,8 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" href="#">
-          <i class="icon ion-thumbsup"></i>
+        <a class="tab-item" ng-click="#">
+          <i class="icon ion-thumbsup"></i> 
           Like
         </a>
         <a class="tab-item" ng-click="modal.show()">
