--- a/www/templates/review.html
+++ b/www/templates/review.html
@@ -14,7 +14,7 @@
 
 
 <br>
-    <div class="list card" ng-repeat="review in reviews">
+    <div class="list card" ng-repeat="review in reviews|filter:searchKey">
 
   <div class="item item-avatar">
     <img src="http://cfs9.blog.daum.net/upload_control/download.blog?fhandle=MDVtMzdAZnM5LmJsb2cuZGF1bS5uZXQ6L1BST0ZJTEUvMC8wLmpwZw==&filenamebg      =0.jpg">
