성분내용추가

--- a/www/templates/food-detail.html
+++ b/www/templates/food-detail.html
@@ -24,7 +24,7 @@
             <a href="#" class="item item-icon-left" ng-repeat="ingredient in food.ingredient">
               <i class="icon ion-beaker"></i>
               {{ingredient.ing_name}}
-              <p>{{ingredient.ing_recommanded}}</p>
+              <p>{{ingredient.ing_recomanded[1]}}</p>
             </a>
           </div>
         </p>
