--- a/www/templates/food-home.html
+++ b/www/templates/food-home.html
@@ -4,11 +4,10 @@
     <div class="bar bar-subheader item-input-inset">
         <label class="item-input-wrapper">
             <i class="icon ion-ios7-search placeholder-icon"></i>
-            <input id="searchKey" type="search" placeholder="Search" ng-model="searchKey" autocorrect="off" >
-
-            <button class="button button-clear" ng-click="clearSearch()">X</button>
+            <input type="search" placeholder="Search" name="search.key" ng-model="search.key" autocorrect="off" />
         </label>
-        <button class="button button-clear" ng-click="search()">Search</button>
+        <!-- <button class="button button-clear" ng-click="search()">Search</button> -->
+        <button class="button button-clear" ng-click="search.key= '' ">X</button>
    </div>
 
 <!-- Ranking -->
@@ -24,7 +23,7 @@
           <i class="icon ion-chevron-right icon-accessory"></i>
 </ion-item> -->
 
-                   <ion-item ng-repeat="food in foods|filter:searchKey" type="item-text-wrap" class="item-avatar"
+                   <ion-item ng-repeat="food in foods|filter:search.key" type="item-text-wrap" class="item-avatar"
                     href="#/tab/home/{{food._id}}/detail">
                       <img ng-src="{{food.image_url}}"/>
                       {{food.snack_name}}
