--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,10 +29,9 @@
     border-radius: 35px;
     left: 15px;
 }
-
+/* 리뷰 페이지 이미지 옆 글씨 있는영역 */
 .card .item-avatar:first-child {
     padding-top: 24px;
     padding-left: 110px;
-    height: 90px;
+    height: 110px;
 }
-
