--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -28,5 +28,6 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Sfa" icon-off="ion-information" icon-on="ion-information" href="#/tab/sfa">
     <ion-nav-view name="tab-sfa"></ion-nav-view>
   </ion-tab>
+  <ion-nav-view name="tab-my"></ion-nav-view>
 
 </ion-tabs>
